fix alignment of nextButton

--- a/styles.css
+++ b/styles.css
@@ -133,6 +133,7 @@ body {
 	padding-top: 0;
 	width: 50%;
 	float: left;
+	text-align: center;
 }
 
 .slideB ul li {
@@ -314,13 +315,13 @@ body {
 
 #nextButton {
 	color: white;
+	display: inline-block;
 	text-align: center;
 	font-size: 15px;
 	width: 5em;
 	border-radius: 10px;
 	background-image: linear-gradient(to left, rgb(107, 107, 202), rgb(83, 83, 216));
 	box-shadow: 1px 2px 2px 0px #7a7777;
-	margin-left: 32%;
 	margin-bottom: 3%;
 	margin-top: 3%;
 	cursor: pointer;
